package aggregates;

public enum Aggregate {
    CHANNEL_SAT,
    SAT_TRANSPONDER
}
