package SatelliteManagement.tree;

/**
 * Enum for the different type of nodes in tree
 * @author Lea Soffel
 * @version 1.0
 */
public enum NodeType {
    SATTELITE,
    TRANSPONDER,
    CHANNEL,
    ROOT
}
