package input;

public class InputChannel {
    public String sid;
    public String name;

    public InputChannel(String sid, String name) {
        this.sid = sid;
        this.name = name;
    }
}
