package output;

public enum Format {
    XML,
    JSON
}
